# gfx_experimenting

./: Cargo.toml
assets/: fullscreen_triangle.vert  mesh.frag  mesh.vert  posteffect.frag
src/: main.rs
src/assets/: mesh.frag  mesh.vert
src/pipelines/: mesh.rs  mod.rs  post_effect.rs
